[package]
name = "netscout"
version = "0.1.0"
edition = "2021"

[lib]
name = "netscout"
path = "src/lib.rs"

[[bin]]
name = "netscout"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = "4.5.10"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
pnet = "0.35.0"
pnet_packet = "0.35.0"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
rustfmt = "0.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = ["full"] }
url = "2.5.2"
